<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:orientation="vertical"
    android:background="@drawable/food_v"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:elevation="5dp"
        app:title="@string/offer_food"
        app:titleMarginStart="18dp"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:titleTextColor="@color/colorWhite" />
        <android.support.v7.widget.CardView
            android:id="@+id/cardInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/transparentBlack">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/linearNameFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/txtName-food"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:drawableStart="@drawable/ic_food_white_24dp"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"/>
                    <EditText
                        android:id="@+id/edtName-food"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/food_name_hint"
                        android:inputType="textCapWords"
                        android:maxLength="20"
                        android:textColorHint="@color/lightGray"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp" />

                    <Spinner
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/Category"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtPrice"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_attach_money_white_24dp"
                        android:text="@string/price"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp" />
                    <EditText
                        android:id="@+id/edtPrice"
                        android:layout_width="50dp"
                        android:inputType="numberDecimal"
                        android:maxLength="6"
                        android:layout_height="wrap_content"
                        android:hint="25.5"
                        android:textColorHint="@color/lightGray"
                        android:tooltipText="@string/price_tooltip"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/txtEuro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/euro"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/txtDiscount"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_money_off_white_24dp"
                        android:text="@string/discount"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp" />
                    <EditText
                        android:id="@+id/edtDiscount"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="25"
                        android:textColorHint="@color/lightGray"
                        android:maxLength="2"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/txtPercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="%"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearAvailableQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/txtAvailableQuantity"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/available_quantity"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"/>
                    <EditText
                        android:id="@+id/edtAvailableQuantity"
                        android:maxLength="6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"/>

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/cardDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@color/transparentBlack">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtShortDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/short_description"
                android:textColor="@color/lightGray"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/edtShortDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/cardImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/transparentBlack">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imgFood"
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/default_food" />

                <ImageButton
                    android:id="@+id/btnSelectPhoto"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/btn_camera"
                    android:src="@drawable/ic_photo_camera_black_24dp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
           android:layout_margin="2dp"
            android:background="@color/darkGray"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:text="@string/submit" />


         <Button
             android:id="@+id/btnPreview"
             android:layout_margin="2dp"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:background="@color/darkGray"
             android:textAllCaps="false"
             android:textColor="@color/colorWhite"
             android:layout_height="wrap_content"
             android:text="@string/preview" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>