<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:orientation="vertical"
    android:background="@drawable/italian_food_port"
    tools:context=".RestaurantProfile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                app:title="@string/restaurant_profile"
                app:titleMarginStart="22dp"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:titleTextColor="@color/colorBlack" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardPhoto"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="1dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/lightTransparentGray">

            <ImageView
                android:id="@+id/imgRestaurant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:layout_gravity="center"
                android:src="@drawable/img_restaurant" />
        </android.support.v7.widget.CardView>
        <ImageView
            android:id="@+id/imgStar"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:src="@drawable/star" />
        <TextView
            android:id="@+id/txtNameRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/restaurant_name"
            android:textColorHint="@color/colorBlack"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtOpeningHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_access_time_black_24dp"
                android:textColorHint="@color/colorBlack"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/opening_hour"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:drawableStart="@drawable/ic_local_phone_black_24dp"
            android:textColorHint="@color/colorBlack"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            />
        <TextView
            android:id="@+id/txtCell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_hint"
            android:drawableStart="@drawable/ic_phone_iphone_black_24dp"
            android:textColorHint="@color/colorBlack"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            />
        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/location_hint"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:textColorHint="@color/colorBlack"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/btnDirection"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_direction"
                    android:src="@drawable/ic_directions_black_24dp" />
                <TextView
                    android:id="@+id/txtDirection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direction"
                    android:layout_gravity="center_horizontal"
                    android:textSize="13sp"
                    android:textColor="@color/colorBlack"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/btnCall"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_call_share"
                    android:src="@drawable/ic_local_phone_black_24dp" />
                <TextView
                    android:id="@+id/txtCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call"
                    android:layout_gravity="center_horizontal"
                    android:textSize="13sp"
                    android:textColor="@color/colorBlack"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/btnShare"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_call_share"
                    android:src="@drawable/ic_share_black_24dp" />
                <TextView
                    android:id="@+id/txtShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:layout_gravity="center_horizontal"
                    android:textSize="13sp"
                    android:textColor="@color/colorBlack"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/btnDailyOffer"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_direction"
                    android:src="@drawable/ic_add_black_24dp" />
                <TextView
                    android:id="@+id/txtDailyOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_offer"
                    android:layout_gravity="center_horizontal"
                    android:textSize="13sp"
                    android:textColor="@color/colorBlack"
                    />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</ScrollView>
